--- a/androapp/BangkitCapstone/app/src/main/res/values/colors.xml
+++ b/androapp/BangkitCapstone/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#5078ba</color>
+    <color name="purple_500">#3b62a3</color>
+    <color name="purple_700">#294d8a</color>
+    <color name="teal_200">#90F2FF</color>
+    <color name="teal_700">#90F2FF</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#7098DA</color>
+    <color name="colorPrimaryDark">#7098DA</color>
+    <color name="colorAccent">#7098DA</color>
+    <color name="colorBGshape">#7098DA</color>
+    <color name="colorText">#FFFFFF</color>
+    <color name="colorBackground">#FFFFFF</color>
 </resources>
