update menu images

--- a/androapp/BangkitCapstone/app/src/main/res/layout/activity_main.xml
+++ b/androapp/BangkitCapstone/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mental Health Assistant"
+                android:text="@string/dashboard_title"
                 android:textColor="@color/colorText"
                 android:textSize="25sp"
                 android:textStyle="bold"
