--- a/androapp/BangkitCapstone/app/src/main/res/layout/dashboard_list.xml
+++ b/androapp/BangkitCapstone/app/src/main/res/layout/dashboard_list.xml
@@ -15,7 +15,8 @@
         <ImageView
             android:id="@+id/myimage"
             android:layout_width="200dp"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp"
+            android:contentDescription="@string/menu_image" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
