--- a/androapp/BangkitCapstone/app/src/main/res/layout/activity_main.xml
+++ b/androapp/BangkitCapstone/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="56dp"
         >
 
         <RelativeLayout
